# buck

./: .gitignore  README.md  pyproject.toml
.github/workflows/: unit_tests.yaml
reqs/: base.txt
src/: buck.py  buck_aws.py
src/buck/: buck.py  cli.py
test/: test_buck.py  test_cli.py
